# rhythr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  manifest.rs
crates/formats/: Cargo.toml
crates/formats/src/: lib.rs  map.rs  reader.rs  rhr.rs  sspm.rs
crates/formats/tests/: gates.rs  golden.rs  rhm.rs
crates/gui/: Cargo.toml  build.rs  tauri.appimage.conf.json  tauri.conf.json  tauri.windows.conf.json
crates/gui/capabilities/: default.json
crates/gui/src/: main.rs
crates/gui/ui/: app.js  index.html  style.css
crates/render/: Cargo.toml
crates/render/examples/: extract_exe.rs  meter_test.rs  probe_gpu.rs  rhs_probe.rs
crates/render/src/: audio.rs  builtin.rs  config.rs  exe_assets.rs  hud.rs  hud.wgsl  lib.rs  mesh.rs  mods.rs  note.wgsl  renderer.rs  scene.rs  video.rs
crates/sim/: Cargo.toml
crates/sim/src/: hitreg.rs  integrity.rs  lib.rs  timebase.rs
crates/sim/tests/: integrity_golden.rs
docs/: LINUX-BUILD.md  USER-GUIDE.md  WINDOWS-BUILD.md
packaging/aur/: PKGBUILD  README.md
packaging/linux/: Containerfile  rhythr-mime.xml  rhythr.desktop
scripts/: build-linux.sh  make-latest-json.py
testdata/: fail_map_map_json.json  fail_score131.rhr  hardrock_map_map_json.json  hardrock_score192.rhr  pass_long_map_map_json.json  pass_long_score77.rhr  speedmod_map_map_json.json  speedmod_score193.rhr  testdata_manifest.json
