[workspace]
resolver = "2"
members = ["crates/formats", "crates/sim", "crates/cli", "crates/render", "crates/gui"]

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/KillerOp007/rhythr"

[workspace.dependencies]
rhythia-formats = { path = "crates/formats" }
rhythia-sim = { path = "crates/sim" }
rhythia-render = { path = "crates/render" }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
# No symbol names in shipped binaries (smaller + less internal detail).
strip = true
