[package]
name = "rhythia-formats"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true

[dev-dependencies]
serde_json.workspace = true
# Writing test .rhm archives needs the zip writer, which the runtime dep
# (deflate-only, no default features) does not pull in.
zip = { version = "2", default-features = false, features = ["deflate"] }
