[package]
name = "rhythia-gui"
version = "0.2.9"
edition.workspace = true
license.workspace = true
description = "Rhythia replay renderer — desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rhythia-formats.workspace = true
rhythia-sim.workspace = true
rhythia-render.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
base64 = "0.22"
png = "0.17"
tempfile = "3"
dirs = "6"

[[bin]]
name = "rhythr"
path = "src/main.rs"
